spacing issues

--- a/css/about_wide.css
+++ b/css/about_wide.css
@@ -49,7 +49,7 @@
 .menu {
   position: absolute;
   width: 500px;
-  top: 100px;
+  top: 80px;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
